0029667: Visualization, TKV3d - User-defined texture coordinates corrupted by StdPrs_ShadedShape

Add protection in fillTriangles() against void UV range of a face.